unreleased

* Enhancements

  * Respect ENV['DATABASE_URL'] instead of expecting `psql DBNAME` to always work

0.0.2 / 2015-01-23

* Enhancements

  * bin/geocode_records table_name - extremely basic CLI

0.0.1 / 2015-01-23

initial release!