@@ -12,3 +12,4 @@
 *.o
 *.a
 mkmf.log
+/node_modules/
