@@ -1,0 +1,7 @@
+{
+  "name": "rolodeck",
+  "private": true,
+  "dependencies": {
+    "smartystreets": "^1.3.2"
+  }
+}
